# pix-fraud

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt  run_check.py  setup.py
app/: app.py
notebooks/: case_fraud.ipynb
src/: data_prep.py  features.py  predict.py  train.py
tests/: test_pix_fraud.py
